Add NPC system